@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=net-libs/libpcap geoip? ( dev-libs/geoip ) mongodb? ( >=dev-libs/mongo-c-driver-0.8.1-r1 ) mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) sqlite? ( =dev-db/sqlite-3* ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DEPEND=net-libs/libpcap geoip? ( dev-libs/geoip ) mongodb? ( >=dev-libs/mongo-c-driver-0.8.1-r1 ) mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) sqlite? ( =dev-db/sqlite-3* ) virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
 DESCRIPTION=A network tool to gather IP traffic information
 EAPI=5
 HOMEPAGE=http://www.pmacct.net/
@@ -9,4 +9,4 @@ RDEPEND=net-libs/libpcap geoip? ( dev-libs/geoip ) mongodb? ( >=dev-libs/mongo-c
 SLOT=0
 SRC_URI=http://www.pmacct.net/pmacct-1.5.0rc3.tar.gz
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=f2450c6c88396d4fee673efbe6e4444d
+_md5_=7c4ecaa4fdd53b1bc0d04b361caf0921
